declare flake8 import order style

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,3 +48,6 @@ zip_safe = true
 [options.entry_points]
 colcon_core.executor =
     parallel = colcon_parallel_executor.executor.parallel:ParallelExecutorExtension
+
+[flake8]
+import-order-style = google
