set pytest option filterwarnings: error

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,11 @@ tests_require =
   pytest-cov
 zip_safe = true
 
+[tool:pytest]
+filterwarnings =
+    error
+junit_suite_name = colcon-parallel-executor
+
 [options.entry_points]
 colcon_core.executor =
     parallel = colcon_parallel_executor.executor.parallel:ParallelExecutorExtension
