add desc order in changelog link

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = colcon-parallel-executor
 version = attr: colcon_parallel_executor.__version__
 url = https://colcon.readthedocs.io
 project_urls =
-    Changelog = https://github.com/colcon/colcon-parallel-executor/milestones?state=closed
+    Changelog = https://github.com/colcon/colcon-parallel-executor/milestones?direction=desc&sort=due_date&state=closed
     GitHub = https://github.com/colcon/colcon-parallel-executor/
 author = Dirk Thomas
 author_email = web@dirk-thomas.net
