--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [colcon-parallel-executor]
 No-Python2:
 Depends3: python3-colcon-core (>= 0.3.15)
-Suite: xenial bionic stretch buster
+Suite: xenial bionic cosmic disco eoan stretch buster
 X-Python3-Version: >= 3.5
