--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,3 +29,4 @@ jobs:
         with:
           python-version: ${{matrix.python}}
       - uses: colcon/ci@v1
+      - uses: codecov/codecov-action@v3
