--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ filterwarnings =
     ignore:pkg_resources is deprecated as an API::flake8_import_order
     ignore:SelectableGroups dict interface is deprecated::flake8
     ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
+    # Suppress resource warnings pending investigation
+    always::ResourceWarning
 junit_suite_name = colcon-parallel-executor
 
 [options.entry_points]
