--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ keywords = colcon
 [options]
 python_requires = >=3.6
 install_requires =
-  colcon-core>=0.3.15
+  colcon-core>=0.19.0
 packages = find:
 zip_safe = true
 
@@ -62,6 +62,8 @@ markers =
     linter
 
 [options.entry_points]
+colcon_core.event_handler =
+    parallel_status = colcon_parallel_executor.event_handler.parallel_status:ParallelStatusEventHandler
 colcon_core.executor =
     parallel = colcon_parallel_executor.executor.parallel:ParallelExecutorExtension
 
